--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>My site</title>
 </head>
 <body>
-    <h1>Hola soy Gustavo 👍</h1>    
+    <h1>Hola soy Gustavo. 👍</h1>    
 </body>
 </html>
