--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hola soy Gustavo. V2 👍</h1>    
+<img src="./Imagenes/Imagen.png" alt="Descripción de la imagen" width="850" height="300" style="display: block; margin: 0 auto;">
 </body>
 </html>
